# iracing-driver-data-dump

./: Cargo.toml  config.example.toml
src/: cli.rs  error.rs  iracing.rs  main.rs  settings.rs
