[package]
name = "iracing-driver-data-dump"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.2"
chrono = "0.4.26"
clap = { version = "4.4.0", features = ["derive"] }
comfy-table = "7.0.1"
config = "0.13.3"
csv = "1.2.2"
reqwest = { version = "0.11.20", features = ["json", "cookies"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
sha2 = "0.10.7"
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
url = { version = "2.4.0", features = ["serde"] }

[profile.release]
lto = "thin"
